k8s/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: demo-destination
spec:
  host: demo-service
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
